@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +packettracer-521.ebuild:
+  new version
+
   06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> packettracer-52.ebuild:
   mark stable on x86
 
